# faithful

./: .gitignore  Cargo.toml  Makefile  README.md  default.nix  flake.nix
scripts/: decode_pls.sh  get_anims.sh  get_objects.sh  get_sprites.sh  get_sprites_nums.sh  make_bl320.sh  make_maps.sh  make_test_maps.sh  make_water.sh  show_anims.sh
shaders/: landscape.frag  landscape.vert  landscape_cell.frag  landscape_cpu.frag  landscape_full.frag  landscape_grad.frag  objects.frag  objects.vert  objects_1.frag  objects_1.vert
src/: default_model.rs  envelop.rs  intersect.rs  landscape.rs  lib.rs  main.rs  model.rs  tex_model.rs  view.rs
src/geometry/: circle.rs  cube.rs  ico.rs  ico_sphere.rs  sphere.rs
src/opengl/: buffer.rs  gl.rs  program.rs  texture.rs  uniform.rs  vertex.rs
src/pop/: animation.rs  bl320.rs  landscape.rs  level.rs  mod.rs  objects.rs  pls.rs  psfb.rs  types.rs  units.rs
src/pop/landscape/: common.rs  disp.rs  globe.rs  land.rs  minimap.rs  water.rs
